First attempt at ajax() - lab3
Clearly not working, only commiting for lab 3.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,17 @@
 							<input id="searchText" class="form-control" type="text" placeholder="Enter key words">
 						</div>
 						<select id="searchCategory" class="btn btn-primary">
-							<option value="starter">Starter</option>
-							<option value="main dish">Main course</option>
+							<option value="main course">Main course</option>
+							<option value="side dish">Side dish</option>
 							<option value="dessert">Dessert</option>
+							<option value="appetizer">Appetizer</option>
+							<option value="salad">Salad</option>
+							<option value="bread">Bread</option>
+							<option value="breakfast">Breakfast</option>
+							<option value="soup">Soup</option>
+							<option value="beverage">Beverage</option>
+							<option value="sauce">Sauce</option>
+							<option value="drink">Drink</option>
 						</select>
 						<button id="searchButton" class="btn btn-warning" type="button">Search</button>
 					</div>
