Display of dishDetails
The dishDetails now works - some awful links to the API itself, but nothing major. The Menu itself doesn't work yet though.  Committing because no functionality has been lost, despite of there being quite a few errors still.

--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
 			<div id="dishDetails" class="col-sm-9 col-xs-12">
 				<div class="row">
 					<!--DISH INSTRUCTIONS -->
-					<div class="col-sm-4 col-xs-12">
+					<div class="col-sm-6 col-xs-12">
 						<div>
 							<h2 id="dishTitle"></h2>
 							<img id="dishImage">
-							<p id="dishDescription"></p>
+							<p id="dishSummary"></p>
 							<button id="toSearchButton" class="btn btn-warning" type="button">Back to search</button>
 						</div>
 					</div>
 					<!--END DISH INSTRUCTIONS -->
 					<!--DISH INGREDIENTS -->
-					<div id="dishIngredients" class="col-sm-5 col-xs-12 border">
+					<div id="dishIngredients" class="col-sm-6 col-xs-12 border">
 						<div>
 							<h3>Ingredients for <span id="numberOfGuests"></span> persons</h3>
 							<div id="ingredientsDisplay" class="row"></div>
 							<div class = "row">
-								<button id="addToMenuButton" class="btn btn-warning col-sm-offset-1" type="button">Add to menu</button>
+								<button id="addToMenuButton" class="btn btn-warning" type="button">Add to menu</button>
 								<b class="col-sm-offset-3">Dish price: <span id="dishPrice"></span> SEK</b>
 							</div>
 						</div>
