Add/Remove dish buttons
When one adds a dish to the menu, it can now be removed as well.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 							<div id="ingredientsDisplay" class="row"></div>
 							<div class = "row">
 								<button id="addToMenuButton" class="btn btn-warning" type="button">Add to menu</button>
-								<b class="col-sm-offset-3">Dish price: <span id="dishPrice"></span> SEK</b>
+								<button id="removeFromMenuButton" class="btn btn-warning" type="button">Remove from menu</button>
+								<b class="col-sm-offset-2">Dish price: <span id="dishPrice"></span> SEK</b>
 							</div>
 						</div>
 					</div>
