Error handling and floating numbers
Added some more changedetails to the views to make the handling more rigorous.
Among other things: loading text, error text. Havent tested without internet yet.
Fixed the floating numbers so that they are rounded to nearest integer.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 					</div>
 					<!--END SEARCH BAR -->
 					<!--SEARCH RESULTS -->
-					<div id="searchResultsRow" class="row"></div>
+					<div id="searchResultsRow" class="row">
+					</div>
 					<!--END SEARCH RESULTS -->
 				</div>
 			</div>
